# irctf

./: .gitmodules  CMakeLists.txt  LICENSE
src/: irctf.cpp  visit_response.hpp
src/gui/: gui.cpp  gui.hpp  readchar.cpp
src/gui/gui/: log_item.cpp  log_item.hpp
src/irc/: network.cpp  network.hpp  responses.cpp
